--- a/style.css
+++ b/style.css
@@ -30,15 +30,15 @@ body {
 
 .textbox{ /* The entire white box */
     filter: drop-shadow(10px 15px 20px #000); 
+    background: white;
+    border: 4px solid black;
+    border-radius: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform:translate(-50%, -50%);
-    height: 285px;
+    height: 320px;
     width: 400px;
-    background: white;
-    border: 2px solid black;
-    border-radius: 20px;
 }
 
 .info {
@@ -52,22 +52,30 @@ body {
 }
 
 .result { /* Text that should appear showing the BMI, calories to gain/lose weight, and a button to return */
-  position: absolute;
-  line-height: 1.6;
+  position: relative;
+  line-height: 1.3;
   opacity: 0;
   pointer-events: none;
-  word-wrap: break-word
 }
 
+.resulttext {
+  position: absolute;
+  font-size: 16px;
+}
+
+.resultbutton {
+  position: absolute;
+  margin-top: 310px;
+  margin-left: 140px;
+}
 .buttons {
   display: flex;
   justify-content: center;
-
 }
 
 select {
-  border: 1px solid black;
-  border-radius: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 input {
@@ -75,9 +83,14 @@ input {
   border: 1px solid black;
   border-radius: 10px;
   padding: 5px;
+  transition: 0.3s;
 }
 
-button{
+input:hover { /* Inverts colours when hovering */
+  background: #adadad;
+}
+
+button {
     color: black;
     font-family: Trebuchet MS;
     cursor: pointer;
@@ -86,4 +99,10 @@ button{
     border-radius: 20px;
     background: white;
     margin: 4px;
+    transition: 0.3s;
+}
+
+button:hover { /* Inverts colours when hovering */
+  color: white;
+  background: black;
 }
